# freetype_test

./: .gitignore  CMakeLists.txt  font_render.py  ttf2woff2.py  vcpkg.json
src/: fontmanager.cpp  fontmanager.h  main.cpp
